--- a/sign-in.html
+++ b/sign-in.html
@@ -27,7 +27,7 @@
                 </div>
                 <button type="submit"><i class="fas fa-sign-in-alt"></i> Sign In</button>
             </form>
-            <p>Don't have an account? <a href="sign-up.html"><i class="fas fa-user-plus"></i> Sign Up</a></p>
+            <p>Don't have an account? <a href="index.html"><i class="fas fa-user-plus"></i> Sign Up</a></p>
         </section>
     </div>
 </body>
